# mcp-wardrowbe

./: .gitignore  CHANGELOG.md  LICENSE  README.md  get_refresh_token.py  pyproject.toml
.claude/skills/: wardrowbe-skill
skills/wardrowbe-skill/: README.md  SKILL.md
skills/wardrowbe-skill/examples/: wash-day.md
wardrowbe_mcp/: __init__.py  __main__.py  auth.py  client.py  server.py  skill
wardrowbe_mcp/skill/examples/: morning-outfit.md  wardrobe-audit.md
